qt6/gen_qlistwidget.h

typedef struct QBrush QBrush;
typedef struct QDataStream QDataStream;
typedef struct QFont QFont;
typedef struct QIcon QIcon;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QListWidget QListWidget;
typedef struct QListWidgetItem QListWidgetItem;
typedef struct QMetaObject QMetaObject;
typedef struct QMimeData QMimeData;
typedef struct QModelIndex QModelIndex;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QSize QSize;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
QListWidgetItem* QListWidgetItem_new();
QListWidgetItem* QListWidgetItem_new2(struct miqt_string text);
QListWidgetItem* QListWidgetItem_new3(QIcon* icon, struct miqt_string text);
QListWidgetItem* QListWidgetItem_new4(QListWidgetItem* other);
QListWidgetItem* QListWidgetItem_new5(QListWidget* listview);
QListWidgetItem* QListWidgetItem_new6(QListWidget* listview, int type);
QListWidgetItem* QListWidgetItem_new7(struct miqt_string text, QListWidget* listview);
QListWidgetItem* QListWidgetItem_new8(struct miqt_string text, QListWidget* listview, int type);
QListWidgetItem* QListWidgetItem_new9(QIcon* icon, struct miqt_string text, QListWidget* listview);
QListWidgetItem* QListWidgetItem_new10(QIcon* icon, struct miqt_string text, QListWidget* listview, int type);
QListWidgetItem* QListWidgetItem_clone(const QListWidgetItem* self);
QListWidget* QListWidgetItem_listWidget(const QListWidgetItem* self);
void QListWidgetItem_setSelected(QListWidgetItem* self, bool select);
bool QListWidgetItem_isSelected(const QListWidgetItem* self);
void QListWidgetItem_setHidden(QListWidgetItem* self, bool hide);
bool QListWidgetItem_isHidden(const QListWidgetItem* self);
int QListWidgetItem_flags(const QListWidgetItem* self);
void QListWidgetItem_setFlags(QListWidgetItem* self, int flags);
struct miqt_string QListWidgetItem_text(const QListWidgetItem* self);
void QListWidgetItem_setText(QListWidgetItem* self, struct miqt_string text);
QIcon* QListWidgetItem_icon(const QListWidgetItem* self);
void QListWidgetItem_setIcon(QListWidgetItem* self, QIcon* icon);
struct miqt_string QListWidgetItem_statusTip(const QListWidgetItem* self);
void QListWidgetItem_setStatusTip(QListWidgetItem* self, struct miqt_string statusTip);
struct miqt_string QListWidgetItem_toolTip(const QListWidgetItem* self);
void QListWidgetItem_setToolTip(QListWidgetItem* self, struct miqt_string toolTip);
struct miqt_string QListWidgetItem_whatsThis(const QListWidgetItem* self);
void QListWidgetItem_setWhatsThis(QListWidgetItem* self, struct miqt_string whatsThis);
QFont* QListWidgetItem_font(const QListWidgetItem* self);
void QListWidgetItem_setFont(QListWidgetItem* self, QFont* font);
int QListWidgetItem_textAlignment(const QListWidgetItem* self);
void QListWidgetItem_setTextAlignment(QListWidgetItem* self, int alignment);
void QListWidgetItem_setTextAlignmentWithAlignment(QListWidgetItem* self, int alignment);
void QListWidgetItem_setTextAlignment2(QListWidgetItem* self, int alignment);
QBrush* QListWidgetItem_background(const QListWidgetItem* self);
void QListWidgetItem_setBackground(QListWidgetItem* self, QBrush* brush);
QBrush* QListWidgetItem_foreground(const QListWidgetItem* self);
void QListWidgetItem_setForeground(QListWidgetItem* self, QBrush* brush);
int QListWidgetItem_checkState(const QListWidgetItem* self);
void QListWidgetItem_setCheckState(QListWidgetItem* self, int state);
QSize* QListWidgetItem_sizeHint(const QListWidgetItem* self);
void QListWidgetItem_setSizeHint(QListWidgetItem* self, QSize* size);
QVariant* QListWidgetItem_data(const QListWidgetItem* self, int role);
void QListWidgetItem_setData(QListWidgetItem* self, int role, QVariant* value);
bool QListWidgetItem_operatorLesser(const QListWidgetItem* self, QListWidgetItem* other);
void QListWidgetItem_read(QListWidgetItem* self, QDataStream* in);
void QListWidgetItem_write(const QListWidgetItem* self, QDataStream* out);
void QListWidgetItem_operatorAssign(QListWidgetItem* self, QListWidgetItem* other);
int QListWidgetItem_type(const QListWidgetItem* self);
bool QListWidgetItem_override_virtual_clone(void* self, intptr_t slot);
QListWidgetItem* QListWidgetItem_virtualbase_clone(const void* self);
bool QListWidgetItem_override_virtual_data(void* self, intptr_t slot);
QVariant* QListWidgetItem_virtualbase_data(const void* self, int role);
bool QListWidgetItem_override_virtual_setData(void* self, intptr_t slot);
void QListWidgetItem_virtualbase_setData(void* self, int role, QVariant* value);
bool QListWidgetItem_override_virtual_operatorLesser(void* self, intptr_t slot);
bool QListWidgetItem_virtualbase_operatorLesser(const void* self, QListWidgetItem* other);
bool QListWidgetItem_override_virtual_read(void* self, intptr_t slot);
void QListWidgetItem_virtualbase_read(void* self, QDataStream* in);
bool QListWidgetItem_override_virtual_write(void* self, intptr_t slot);
void QListWidgetItem_virtualbase_write(const void* self, QDataStream* out);
void QListWidgetItem_delete(QListWidgetItem* self);
QListWidget* QListWidget_new(QWidget* parent);
QListWidget* QListWidget_new2();
QMetaObject* QListWidget_metaObject(const QListWidget* self);
void* QListWidget_metacast(QListWidget* self, const char* param1);
int QListWidget_metacall(QListWidget* self, int param1, int param2, void** param3);
struct miqt_string QListWidget_tr(const char* s);
void QListWidget_setSelectionModel(QListWidget* self, QItemSelectionModel* selectionModel);
QListWidgetItem* QListWidget_item(const QListWidget* self, int row);
int QListWidget_row(const QListWidget* self, QListWidgetItem* item);
void QListWidget_insertItem(QListWidget* self, int row, QListWidgetItem* item);
void QListWidget_insertItem2(QListWidget* self, int row, struct miqt_string label);
void QListWidget_insertItems(QListWidget* self, int row, struct miqt_array /* of struct miqt_string */  labels);
void QListWidget_addItem(QListWidget* self, struct miqt_string label);
void QListWidget_addItemWithItem(QListWidget* self, QListWidgetItem* item);
void QListWidget_addItems(QListWidget* self, struct miqt_array /* of struct miqt_string */  labels);
QListWidgetItem* QListWidget_takeItem(QListWidget* self, int row);
int QListWidget_count(const QListWidget* self);
QListWidgetItem* QListWidget_currentItem(const QListWidget* self);
void QListWidget_setCurrentItem(QListWidget* self, QListWidgetItem* item);
void QListWidget_setCurrentItem2(QListWidget* self, QListWidgetItem* item, int command);
int QListWidget_currentRow(const QListWidget* self);
void QListWidget_setCurrentRow(QListWidget* self, int row);
void QListWidget_setCurrentRow2(QListWidget* self, int row, int command);
QListWidgetItem* QListWidget_itemAt(const QListWidget* self, QPoint* p);
QListWidgetItem* QListWidget_itemAt2(const QListWidget* self, int x, int y);
QRect* QListWidget_visualItemRect(const QListWidget* self, QListWidgetItem* item);
void QListWidget_sortItems(QListWidget* self);
void QListWidget_setSortingEnabled(QListWidget* self, bool enable);
bool QListWidget_isSortingEnabled(const QListWidget* self);
void QListWidget_editItem(QListWidget* self, QListWidgetItem* item);
void QListWidget_openPersistentEditor(QListWidget* self, QListWidgetItem* item);
void QListWidget_closePersistentEditor(QListWidget* self, QListWidgetItem* item);
bool QListWidget_isPersistentEditorOpen(const QListWidget* self, QListWidgetItem* item);
QWidget* QListWidget_itemWidget(const QListWidget* self, QListWidgetItem* item);
void QListWidget_setItemWidget(QListWidget* self, QListWidgetItem* item, QWidget* widget);
void QListWidget_removeItemWidget(QListWidget* self, QListWidgetItem* item);
struct miqt_array /* of QListWidgetItem* */  QListWidget_selectedItems(const QListWidget* self);
struct miqt_array /* of QListWidgetItem* */  QListWidget_findItems(const QListWidget* self, struct miqt_string text, int flags);
struct miqt_array /* of QListWidgetItem* */  QListWidget_items(const QListWidget* self, QMimeData* data);
QModelIndex* QListWidget_indexFromItem(const QListWidget* self, QListWidgetItem* item);
QListWidgetItem* QListWidget_itemFromIndex(const QListWidget* self, QModelIndex* index);
void QListWidget_scrollToItem(QListWidget* self, QListWidgetItem* item);
void QListWidget_clear(QListWidget* self);
void QListWidget_itemPressed(QListWidget* self, QListWidgetItem* item);