qt6/gen_qlistwidget.nim


proc fcQListWidgetItem_new(): ptr cQListWidgetItem {.importc: "QListWidgetItem_new".}
proc fcQListWidgetItem_new2(text: struct_miqt_string): ptr cQListWidgetItem {.importc: "QListWidgetItem_new2".}
proc fcQListWidgetItem_new3(icon: pointer, text: struct_miqt_string): ptr cQListWidgetItem {.importc: "QListWidgetItem_new3".}
proc fcQListWidgetItem_new4(other: pointer): ptr cQListWidgetItem {.importc: "QListWidgetItem_new4".}
proc fcQListWidgetItem_new5(listview: pointer): ptr cQListWidgetItem {.importc: "QListWidgetItem_new5".}
proc fcQListWidgetItem_new6(listview: pointer, typeVal: cint): ptr cQListWidgetItem {.importc: "QListWidgetItem_new6".}
proc fcQListWidgetItem_new7(text: struct_miqt_string, listview: pointer): ptr cQListWidgetItem {.importc: "QListWidgetItem_new7".}
proc fcQListWidgetItem_new8(text: struct_miqt_string, listview: pointer, typeVal: cint): ptr cQListWidgetItem {.importc: "QListWidgetItem_new8".}
proc fcQListWidgetItem_new9(icon: pointer, text: struct_miqt_string, listview: pointer): ptr cQListWidgetItem {.importc: "QListWidgetItem_new9".}
proc fcQListWidgetItem_new10(icon: pointer, text: struct_miqt_string, listview: pointer, typeVal: cint): ptr cQListWidgetItem {.importc: "QListWidgetItem_new10".}
proc fcQListWidgetItem_clone(self: pointer, ): pointer {.importc: "QListWidgetItem_clone".}
proc fcQListWidgetItem_listWidget(self: pointer, ): pointer {.importc: "QListWidgetItem_listWidget".}
proc fcQListWidgetItem_setSelected(self: pointer, select: bool): void {.importc: "QListWidgetItem_setSelected".}
proc fcQListWidgetItem_isSelected(self: pointer, ): bool {.importc: "QListWidgetItem_isSelected".}
proc fcQListWidgetItem_setHidden(self: pointer, hide: bool): void {.importc: "QListWidgetItem_setHidden".}
proc fcQListWidgetItem_isHidden(self: pointer, ): bool {.importc: "QListWidgetItem_isHidden".}
proc fcQListWidgetItem_flags(self: pointer, ): cint {.importc: "QListWidgetItem_flags".}
proc fcQListWidgetItem_setFlags(self: pointer, flags: cint): void {.importc: "QListWidgetItem_setFlags".}
proc fcQListWidgetItem_text(self: pointer, ): struct_miqt_string {.importc: "QListWidgetItem_text".}
proc fcQListWidgetItem_setText(self: pointer, text: struct_miqt_string): void {.importc: "QListWidgetItem_setText".}
proc fcQListWidgetItem_icon(self: pointer, ): pointer {.importc: "QListWidgetItem_icon".}
proc fcQListWidgetItem_setIcon(self: pointer, icon: pointer): void {.importc: "QListWidgetItem_setIcon".}
proc fcQListWidgetItem_statusTip(self: pointer, ): struct_miqt_string {.importc: "QListWidgetItem_statusTip".}
proc fcQListWidgetItem_setStatusTip(self: pointer, statusTip: struct_miqt_string): void {.importc: "QListWidgetItem_setStatusTip".}
proc fcQListWidgetItem_toolTip(self: pointer, ): struct_miqt_string {.importc: "QListWidgetItem_toolTip".}
proc fcQListWidgetItem_setToolTip(self: pointer, toolTip: struct_miqt_string): void {.importc: "QListWidgetItem_setToolTip".}
proc fcQListWidgetItem_whatsThis(self: pointer, ): struct_miqt_string {.importc: "QListWidgetItem_whatsThis".}
proc fcQListWidgetItem_setWhatsThis(self: pointer, whatsThis: struct_miqt_string): void {.importc: "QListWidgetItem_setWhatsThis".}
proc fcQListWidgetItem_font(self: pointer, ): pointer {.importc: "QListWidgetItem_font".}
proc fcQListWidgetItem_setFont(self: pointer, font: pointer): void {.importc: "QListWidgetItem_setFont".}
proc fcQListWidgetItem_textAlignment(self: pointer, ): cint {.importc: "QListWidgetItem_textAlignment".}
proc fcQListWidgetItem_setTextAlignment(self: pointer, alignment: cint): void {.importc: "QListWidgetItem_setTextAlignment".}
proc fcQListWidgetItem_setTextAlignmentWithAlignment(self: pointer, alignment: cint): void {.importc: "QListWidgetItem_setTextAlignmentWithAlignment".}
proc fcQListWidgetItem_setTextAlignment2(self: pointer, alignment: cint): void {.importc: "QListWidgetItem_setTextAlignment2".}
proc fcQListWidgetItem_background(self: pointer, ): pointer {.importc: "QListWidgetItem_background".}
proc fcQListWidgetItem_setBackground(self: pointer, brush: pointer): void {.importc: "QListWidgetItem_setBackground".}
proc fcQListWidgetItem_foreground(self: pointer, ): pointer {.importc: "QListWidgetItem_foreground".}
proc fcQListWidgetItem_setForeground(self: pointer, brush: pointer): void {.importc: "QListWidgetItem_setForeground".}
proc fcQListWidgetItem_checkState(self: pointer, ): cint {.importc: "QListWidgetItem_checkState".}
proc fcQListWidgetItem_setCheckState(self: pointer, state: cint): void {.importc: "QListWidgetItem_setCheckState".}
proc fcQListWidgetItem_sizeHint(self: pointer, ): pointer {.importc: "QListWidgetItem_sizeHint".}
proc fcQListWidgetItem_setSizeHint(self: pointer, size: pointer): void {.importc: "QListWidgetItem_setSizeHint".}
proc fcQListWidgetItem_data(self: pointer, role: cint): pointer {.importc: "QListWidgetItem_data".}
proc fcQListWidgetItem_setData(self: pointer, role: cint, value: pointer): void {.importc: "QListWidgetItem_setData".}
proc fcQListWidgetItem_operatorLesser(self: pointer, other: pointer): bool {.importc: "QListWidgetItem_operatorLesser".}
proc fcQListWidgetItem_read(self: pointer, inVal: pointer): void {.importc: "QListWidgetItem_read".}
proc fcQListWidgetItem_write(self: pointer, outVal: pointer): void {.importc: "QListWidgetItem_write".}
proc fcQListWidgetItem_operatorAssign(self: pointer, other: pointer): void {.importc: "QListWidgetItem_operatorAssign".}
proc fcQListWidgetItem_typeX(self: pointer, ): cint {.importc: "QListWidgetItem_type".}
proc fQListWidgetItem_virtualbase_clone(self: pointer, ): pointer{.importc: "QListWidgetItem_virtualbase_clone".}
proc fcQListWidgetItem_override_virtual_clone(self: pointer, slot: int) {.importc: "QListWidgetItem_override_virtual_clone".}
proc fQListWidgetItem_virtualbase_data(self: pointer, role: cint): pointer{.importc: "QListWidgetItem_virtualbase_data".}
proc fcQListWidgetItem_override_virtual_data(self: pointer, slot: int) {.importc: "QListWidgetItem_override_virtual_data".}
proc fQListWidgetItem_virtualbase_setData(self: pointer, role: cint, value: pointer): void{.importc: "QListWidgetItem_virtualbase_setData".}
proc fcQListWidgetItem_override_virtual_setData(self: pointer, slot: int) {.importc: "QListWidgetItem_override_virtual_setData".}
proc fQListWidgetItem_virtualbase_operatorLesser(self: pointer, other: pointer): bool{.importc: "QListWidgetItem_virtualbase_operatorLesser".}
proc fcQListWidgetItem_override_virtual_operatorLesser(self: pointer, slot: int) {.importc: "QListWidgetItem_override_virtual_operatorLesser".}
proc fQListWidgetItem_virtualbase_read(self: pointer, inVal: pointer): void{.importc: "QListWidgetItem_virtualbase_read".}
proc fcQListWidgetItem_override_virtual_read(self: pointer, slot: int) {.importc: "QListWidgetItem_override_virtual_read".}
proc fQListWidgetItem_virtualbase_write(self: pointer, outVal: pointer): void{.importc: "QListWidgetItem_virtualbase_write".}
proc fcQListWidgetItem_override_virtual_write(self: pointer, slot: int) {.importc: "QListWidgetItem_override_virtual_write".}
proc fcQListWidgetItem_delete(self: pointer) {.importc: "QListWidgetItem_delete".}
proc fcQListWidget_new(parent: pointer): ptr cQListWidget {.importc: "QListWidget_new".}
proc fcQListWidget_new2(): ptr cQListWidget {.importc: "QListWidget_new2".}
proc fcQListWidget_metaObject(self: pointer, ): pointer {.importc: "QListWidget_metaObject".}
proc fcQListWidget_metacast(self: pointer, param1: cstring): pointer {.importc: "QListWidget_metacast".}
proc fcQListWidget_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QListWidget_metacall".}
proc fcQListWidget_tr(s: cstring): struct_miqt_string {.importc: "QListWidget_tr".}
proc fcQListWidget_setSelectionModel(self: pointer, selectionModel: pointer): void {.importc: "QListWidget_setSelectionModel".}
proc fcQListWidget_item(self: pointer, row: cint): pointer {.importc: "QListWidget_item".}
proc fcQListWidget_row(self: pointer, item: pointer): cint {.importc: "QListWidget_row".}
proc fcQListWidget_insertItem(self: pointer, row: cint, item: pointer): void {.importc: "QListWidget_insertItem".}
proc fcQListWidget_insertItem2(self: pointer, row: cint, label: struct_miqt_string): void {.importc: "QListWidget_insertItem2".}
proc fcQListWidget_insertItems(self: pointer, row: cint, labels: struct_miqt_array): void {.importc: "QListWidget_insertItems".}
proc fcQListWidget_addItem(self: pointer, label: struct_miqt_string): void {.importc: "QListWidget_addItem".}
proc fcQListWidget_addItemWithItem(self: pointer, item: pointer): void {.importc: "QListWidget_addItemWithItem".}
proc fcQListWidget_addItems(self: pointer, labels: struct_miqt_array): void {.importc: "QListWidget_addItems".}
proc fcQListWidget_takeItem(self: pointer, row: cint): pointer {.importc: "QListWidget_takeItem".}
proc fcQListWidget_count(self: pointer, ): cint {.importc: "QListWidget_count".}
proc fcQListWidget_currentItem(self: pointer, ): pointer {.importc: "QListWidget_currentItem".}
proc fcQListWidget_setCurrentItem(self: pointer, item: pointer): void {.importc: "QListWidget_setCurrentItem".}
proc fcQListWidget_setCurrentItem2(self: pointer, item: pointer, command: cint): void {.importc: "QListWidget_setCurrentItem2".}
proc fcQListWidget_currentRow(self: pointer, ): cint {.importc: "QListWidget_currentRow".}
proc fcQListWidget_setCurrentRow(self: pointer, row: cint): void {.importc: "QListWidget_setCurrentRow".}
proc fcQListWidget_setCurrentRow2(self: pointer, row: cint, command: cint): void {.importc: "QListWidget_setCurrentRow2".}
proc fcQListWidget_itemAt(self: pointer, p: pointer): pointer {.importc: "QListWidget_itemAt".}
proc fcQListWidget_itemAt2(self: pointer, x: cint, y: cint): pointer {.importc: "QListWidget_itemAt2".}
proc fcQListWidget_visualItemRect(self: pointer, item: pointer): pointer {.importc: "QListWidget_visualItemRect".}
proc fcQListWidget_sortItems(self: pointer, ): void {.importc: "QListWidget_sortItems".}
proc fcQListWidget_setSortingEnabled(self: pointer, enable: bool): void {.importc: "QListWidget_setSortingEnabled".}
proc fcQListWidget_isSortingEnabled(self: pointer, ): bool {.importc: "QListWidget_isSortingEnabled".}
proc fcQListWidget_editItem(self: pointer, item: pointer): void {.importc: "QListWidget_editItem".}
proc fcQListWidget_openPersistentEditor(self: pointer, item: pointer): void {.importc: "QListWidget_openPersistentEditor".}
proc fcQListWidget_closePersistentEditor(self: pointer, item: pointer): void {.importc: "QListWidget_closePersistentEditor".}
proc fcQListWidget_isPersistentEditorOpen(self: pointer, item: pointer): bool {.importc: "QListWidget_isPersistentEditorOpen".}
proc fcQListWidget_itemWidget(self: pointer, item: pointer): pointer {.importc: "QListWidget_itemWidget".}
proc fcQListWidget_setItemWidget(self: pointer, item: pointer, widget: pointer): void {.importc: "QListWidget_setItemWidget".}
proc fcQListWidget_removeItemWidget(self: pointer, item: pointer): void {.importc: "QListWidget_removeItemWidget".}
proc fcQListWidget_selectedItems(self: pointer, ): struct_miqt_array {.importc: "QListWidget_selectedItems".}
proc fcQListWidget_findItems(self: pointer, text: struct_miqt_string, flags: cint): struct_miqt_array {.importc: "QListWidget_findItems".}
proc fcQListWidget_items(self: pointer, data: pointer): struct_miqt_array {.importc: "QListWidget_items".}
proc fcQListWidget_indexFromItem(self: pointer, item: pointer): pointer {.importc: "QListWidget_indexFromItem".}
proc fcQListWidget_itemFromIndex(self: pointer, index: pointer): pointer {.importc: "QListWidget_itemFromIndex".}
proc fcQListWidget_scrollToItem(self: pointer, item: pointer): void {.importc: "QListWidget_scrollToItem".}
proc fcQListWidget_clear(self: pointer, ): void {.importc: "QListWidget_clear".}
proc fcQListWidget_itemPressed(self: pointer, item: pointer): void {.importc: "QListWidget_itemPressed".}
